# AEdge

./: .gitignore  .npmrc  CLAUDE.md  NEXT_STEPS_ARCHITECTURE.md  PERSONA_A_SETUP_GUIDE.md  README.md  createfolder.sh  monorepostructure.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prjctTools.sh  setupAnomEdge.sh  tsconfig.json
.github/workflows/: ci.yml
anomedge_mobile/: .gitignore  README.md  pubspec.yaml
anomedge_mobile/android/app/: build.gradle.kts
anomedge_mobile/ios/Runner/: Info.plist
anomedge_mobile/ios/Runner.xcodeproj/: project.pbxproj
anomedge_mobile/lib/: main.dart
anomedge_mobile/linux/: CMakeLists.txt
anomedge_mobile/web/: index.html  manifest.json
anomedge_mobile/windows/: CMakeLists.txt
cloud-api/: CLAUDE.md  package.json  tsconfig.json
cloud-api/__tests__/: api.test.ts
cloud-api/src/: db.ts  index.ts  schemas.ts  server.ts
cloud-api/src/routes/: sync.ts
crates/anomedge-core/: CLAUDE.md  Cargo.toml
crates/anomedge-core/src/: adapters.rs  feature.rs  ffi.rs  inference.rs  lib.rs  main.rs  ml_statistical.rs  pipeline.rs  rules.rs  trust.rs  types.rs  wasm.rs
crates/anomedge-core/src/adapters/: base.rs  caterpillar.rs  ford_f450.rs  john_deere_139.rs  mod.rs  obd2.rs  registry.rs
crates/anomedge-core/tests/: pipeline_scenario_test.rs  types_test.rs
docs/: index.html
gate-tests/: CLAUDE.md  package.json  phase0.gate.ts  phase1.gate.ts  tsconfig.json
policy/: policy.yaml
scenarios/: cold_start_normal.json  harsh_brake_city.json  heavy_equipment_hydraulic.json  oscillating_fault.json  overheat_highway.json
(+26 files in other folders)
