[package]
name = "anomedge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ort = { version = "2.0.0-rc.12" }
ndarray = "0.15"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "anomedge"
path = "src/main.rs"

[lib]
name = "anomedge_core"
crate-type = ["cdylib", "rlib"]   # cdylib = FFI for Flutter, rlib = normal Rust
